# GitLikeVCS-Cpp

./: CMakeLists.txt  README.md  project.md  project.txt
include/: commit.h  repository.h  utils.h
src/: commit.cpp  main.cpp  repository.cpp  utils.cpp
test_repo/.vcs/: HEAD
test_repo/.vcs/objects/: 3585176529
